; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/hineybush/h88/extr_h88.c_led_set_user.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/hineybush/h88/extr_h88.c_led_set_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@D5 = common dso_local global i32 0, align 4
@USB_LED_SCROLL_LOCK = common dso_local global i32 0, align 4
@E6 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_user(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %5 = call i64 @IS_LED_ON(i32 %3, i32 %4)
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %12

7:                                                ; preds = %1
  %8 = load i32, i32* @D5, align 4
  %9 = call i32 @setPinOutput(i32 %8)
  %10 = load i32, i32* @D5, align 4
  %11 = call i32 @writePinLow(i32 %10)
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @D5, align 4
  %14 = call i32 @setPinInput(i32 %13)
  %15 = load i32, i32* @D5, align 4
  %16 = call i32 @writePinLow(i32 %15)
  br label %17

17:                                               ; preds = %12, %7
  %18 = load i32, i32* %2, align 4
  %19 = load i32, i32* @USB_LED_SCROLL_LOCK, align 4
  %20 = call i64 @IS_LED_ON(i32 %18, i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load i32, i32* @E6, align 4
  %24 = call i32 @setPinOutput(i32 %23)
  %25 = load i32, i32* @E6, align 4
  %26 = call i32 @writePinLow(i32 %25)
  br label %32

27:                                               ; preds = %17
  %28 = load i32, i32* @E6, align 4
  %29 = call i32 @setPinInput(i32 %28)
  %30 = load i32, i32* @E6, align 4
  %31 = call i32 @writePinLow(i32 %30)
  br label %32

32:                                               ; preds = %27, %22
  ret void
}

declare dso_local i64 @IS_LED_ON(i32, i32) #1

declare dso_local i32 @setPinOutput(i32) #1

declare dso_local i32 @writePinLow(i32) #1

declare dso_local i32 @setPinInput(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
